# hack_na_hype

./: .env.dist  .gitignore  README.md  docker-compose.yml
colab/: README.md  Быстрый_запуск.ipynb  Предобработка_данных.ipynb
src/ai/: Dockerfile  main.py  manual.py  pyproject.toml  requirements.txt
src/ai/ai/api/: predictions.py  schemas.py  views.py
src/ai/ai/predictions/: load_WTTE_RNN.py
src/ai/core/: routers.py  schemas.py  settings.py
src/ai/mediafiles/: model.keras  result.csv
src/view/: .dockerignore  Dockerfile  db.sqlite3  manage.py  pyproject.toml
src/view/prediction/: dataclass.py  exceptions.py  forms.py  services.py  urls.py  views.py
src/view/prediction/templatetags/: user_filters.py
src/view/templates/: index.html
src/view/view/: settings.py  urls.py
